ontol/ontol-compiler/test-cases/error/rel/only_entities_may_have_reverse_rel.on
def foo ()
def bar ()
rel {foo} 'a'[]: bar

/// trivia (for span testing)
rel text 'bb': foo // ERROR subject must be a domain type// ERROR must identify a type within the domain
